# lazy_minimal_robotics

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  LICENSE  Paths.cmake  README.md  lazy_cheatsheat.sh
Clustering/RegionGrowing/PCL/: CMakeLists.txt  convex_hull_2d.cpp  project_and_color.cpp  ransac_fit_plane.cpp  region_growing_segmentation.cpp
ExtendedKalmanFilter/: CMakeLists.txt  Readme.md  ekf.hpp  ekf_test.cpp
ExtendedKalmanFilter/IteratedEKF/: CMakeLists.txt  main.cpp
ExtendedKalmanFilter/autotune/: CMakeLists.txt  KalmanErrorTerm.cpp  KalmanErrorTerm.h  KalmanTuner.cpp  KalmanTuner.h  Readme.md  ekf.hpp  plot.py  tuner.cpp
GraphSlam/: Agent.cpp  Agent.h  CMakeLists.txt  DeadReckon.cpp  DeadReckon.h  GraphSlam.cpp  GraphSlam.h  Landmark.h  Odometry.cpp  Odometry.h  Readme.md  SimConstants.h  Visualizer.cpp  Visualizer.h  graph_slam_sim.cpp
Homography/: CMakeLists.txt  Homography.cpp  Homography.h  PlaneReference.hpp  Readme.md  Viz3D.cpp  Viz3D.h  camera_pose_estimator.cpp  main.cpp  oakd_image_reader.hpp  pure_rotation_panorama.cpp  test.cpp
Homography/resources/pure_rotation/: camera_poses_gt.txt
ICP/3D/: CMakeLists.txt  ICP.hpp  ICPBase.hpp  PointToPlane.hpp  PointToPoint.hpp  main.cpp  main_icp.cpp
ICP/carla/: CMakeLists.txt  DepthCamera_2022-12-28-15-02-25.json
ICP/simple/: CMakeLists.txt  main_icp.cpp  main_trans3d.cpp
KalmanFilters/KalmanFilter/: CMakeLists.txt  kalman.hpp  kalman_test.cpp  main.cpp.ray
NonLinearOpt/Ceres/: CMakeLists.txt  Readme.md  ceres_curve_fitting.cpp
NonLinearOpt/GraphOpt/: CMakeLists.txt  Readme.md  g2o_1d.cpp  g2o_1d_robot.cpp  g2o_curve_fitting.cpp
OccupanyGrid/: CMakeLists.txt  OccupancyGrid.cpp  OccupancyGrid.h  Readme.md  main.cpp
OpticalFlow/: CMakeLists.txt  OpticalFlowSparse.cpp  OpticalFlowSparse.h  Readme.md  oflow_dense.cpp  oflow_opencv.cpp  oflow_sparse.cpp
OptimalAssignment/Hungarian/: CMakeLists.txt  Environment.hpp  HungarianOptimizer.hpp  SecureMatrix.hpp  hungarian_simple.cpp  hungarian_test.cpp  readme.md
Optimizations/GaussNewton/: CMakeLists.txt  README.md  gauss_newton.cpp
ParticleFilter/particle_filter/: CMakeLists.txt  package.xml
ParticleFilter/particle_filter/include/: ParticleFilter.h
ParticleFilter/particle_filter/launch/: particle_filter_launch.py
ParticleFilter/particle_filter/rviz/: particle_filter.rviz
ParticleFilter/particle_filter/src/: ParticleFilter.cpp  particle_filter_node.cpp
RayBullet/: CMakeLists.txt  main.cpp
RayBullet/Utils/: RaylibUtils.hpp
SFM/: BaDataParser.hpp  BundleAdjuster.cpp  BundleAdjuster.hpp  CMakeLists.txt  FeatureMatcher.hpp  ImageHandler.hpp  PoseEstimator.hpp  Readme.md  Tracker.hpp  back_project.cpp  bundle_adjuster.cpp  feature_matcher.cpp  main.cpp  o3d_odom.cpp  pose_estimator.cpp  reproject.cpp
SFM/CarlaImageSaver/: CMakeLists.txt
SFM/carla_img_saver/: ThreadSafeQueue.h  carla_img_saver.cpp
SFM/other/: np_2_o3d.py  read.py  select.py
SFM/resources/: data_for_ba.txt  data_for_ba_rounded.txt
SFM/resources/data/: cam_pose_gt.txt  camera_poses_gt.txt  camera_poses_odom.txt  camera_poses_opt.txt  data_for_ba.txt  landmark_positions_opt.txt
SFM/resources/data/pcds/after_viso/kp/: keypoint_cloud_0.pcd  keypoint_cloud_1.pcd  keypoint_cloud_10.pcd  keypoint_cloud_11.pcd  keypoint_cloud_12.pcd  keypoint_cloud_13.pcd  keypoint_cloud_14.pcd  keypoint_cloud_15.pcd  keypoint_cloud_16.pcd  keypoint_cloud_17.pcd  keypoint_cloud_18.pcd  keypoint_cloud_19.pcd  keypoint_cloud_2.pcd  keypoint_cloud_20.pcd  keypoint_cloud_21.pcd  keypoint_cloud_22.pcd  keypoint_cloud_23.pcd  keypoint_cloud_24.pcd  keypoint_cloud_25.pcd  keypoint_cloud_26.pcd  keypoint_cloud_27.pcd  keypoint_cloud_28.pcd  keypoint_cloud_29.pcd  keypoint_cloud_3.pcd  keypoint_cloud_30.pcd  keypoint_cloud_31.pcd  (+23 more)
StereoDepth/: CMakeLists.txt  README.md  StereoDepth.hpp  ThreadSafeQueue.h  main.cpp  main_carla.cpp  main_middlebury.cpp  test.cpp
Tools/LandmarkSim2D/: CMakeLists.txt  Readme.md  landmark_sim_2d.rviz  main.cpp  package.xml
Tools/LandmarkSim2D/include/: Map.h  Pose2D.h  RangeBearingObs.h  Robot.h  Sim.h  VisNode.h
Tools/LandmarkSim2D/src/: Map.cpp  Robot.cpp  Sim.cpp  VisNode.cpp
Tools/LandmarkSim2d/VisNode/: CMakeLists.txt  package.xml
Tools/LandmarkSim2d/VisNode/include/: VisNode.h
Tools/LandmarkSim2d/VisNode/src/: VisNode.cpp
Tools/LandmarkSim2d/landmarkSim2dLib/: CMakeLists.txt
Tools/LandmarkSim2d/landmarkSim2dLib/include/: Map.h  Pose2D.h  RangeBearingObs.h  Robot.h  Sim.h
Tools/LandmarkSim2d/landmarkSim2dLib/src/: Map.cpp  Robot.cpp  Sim.cpp
Tools/LandmarkSim2d/landmarkSim2dVis/: CMakeLists.txt  landmark_sim_2d.rviz  package.xml
Tools/LandmarkSim2d/landmarkSim2dVis/include/: VisNode.h
Tools/LandmarkSim2d/landmarkSim2dVis/src/: VisNode.cpp
Tools/LandmarkSim2d/landmarksim2d_msgs/: CMakeLists.txt  package.xml
Tools/LandmarkSim2d/landmarksim2d_msgs/msg/: RangeBearingObsMsg.msg
Tools/LandmarkSim2d/landmarksim2d_msgs/srv/: Map.srv
Tracking/VisualTracking/: CMakeLists.txt  DatasetUtils.hpp  KalmanErrorTerm.cpp  KalmanTracker.hpp  KalmanTuner.cpp  KalmanTuner.cpp.old  KalmanTuner.h  Mosse.hpp  OFlowTracker.hpp  OpencvTrackers.hpp  Readme.md  StapleTracker.hpp  Tracker.h  generic_tracker.cpp  kalman_tracker.cpp  main_tracker.cpp  projectile.cpp  test.cpp  tuner.cpp
Tracking/VisualTracking/Sort/: CMakeLists.txt  MultiRobotEnv.cpp  MultiRobotEnv.h  sort_test.cpp
Tracking/VisualTracking/Sort/SortTracker/: KalmanFilter.hpp  ObjTrack.cpp  ObjTrack.h  SortTracker.cpp  SortTracker.h
Tracking/VisualTracking/Staple/: fhog.cpp  sse.hpp  staple_tracker.cpp  staple_tracker.hpp
Tracking/VisualTracking/autotune/: CMakeLists.txt  KalmanErrorTerm.cpp  KalmanErrorTerm.h  KalmanTuner.h
Tracking/VisualTracking/resources/simulated_ball_lasot/: groundtruth.txt
VisualOdometry/sparse/: CMakeLists.txt  README.md  Sparse.hpp  ThreadSafeQueue.h  main.cpp
VisualTracking/: CMakeLists.txt  Mosse.hpp  OpticalFlow.hpp  Readme.md  Tracker.h  main.cpp  main_lasot_lmr.cpp  main_lasot_ocv.cpp  main_lasot_ocv_legacy.cpp  main_oflow.cpp  run.sh  safe.cmake
(+88 files in other folders)
