<?xml version="1.0"?>
<package format="2">
  <name>landmark_sim_2d</name>
  <version>0.1.1</version>
  <description>Simple 2d landmark sim</description>
  <maintainer email="goxan.isil@gmail.com">Goksan Isil</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>

  <build_depend>rclcpp</build_depend>

  <exec_depend>rclcpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>